# cppm_homeworks_10_02

./: 02.cpp  CMakeLists.txt  EQTriangle.cpp  EQTriangle.h  Figure.cpp  Figure.h  ISOTriangle.cpp  ISOTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  RTriangle.cpp  RTriangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
