cmake_minimum_required (VERSION 3.8)

project ("02")

set(EXE 02.cpp)
set(FIGURE Figure.cpp Figure.h)
set(TRIANGLE Triangle.cpp Triangle.h)
set(QUADRANGLE Quadrangle.cpp Quadrangle.h)
set(EQTRIANGLE EQTriangle.cpp EQTriangle.h)
set(ISOTRIANGLE ISOTriangle.cpp ISOTriangle.h)
set(RTRIANGLE RTriangle.cpp RTriangle.h)
set(RECTANGLE Rectangle.cpp Rectangle.h)
set(PARALLELOGRAM Parallelogram.cpp Parallelogram.h)
set(SQUARE Square.cpp Square.h)
set(RHOMBUS Rhombus.cpp Rhombus.h)

add_library(Figure STATIC ${FIGURE})
add_library(Triangle STATIC ${TRIANGLE})
add_library(Quadrangle STATIC ${QUADRANGLE})
add_library(EQTriangle STATIC ${EQTRIANGLE})
add_library(ISOTriangle STATIC ${ISOTRIANGLE})
add_library(RTriangle STATIC ${RTRIANGLE})
add_library(Rectangle STATIC ${RECTANGLE})
add_library(Parallelogram STATIC ${PARALLELOGRAM})
add_library(Square STATIC ${SQUARE})
add_library(Rhombus STATIC ${RHOMBUS})

add_executable (02 "02.cpp" )
target_link_libraries(02 Figure)
target_link_libraries(02 Triangle)
target_link_libraries(02 Quadrangle)
target_link_libraries(02 EQTriangle)
target_link_libraries(02 ISOTriangle)
target_link_libraries(02 RTriangle)
target_link_libraries(02 Rectangle)
target_link_libraries(02 Parallelogram)
target_link_libraries(02 Square)
target_link_libraries(02 Rhombus)